# File-Transfer-Server

./: .gitignore  README.md  cli.py  decrypt_service.py  encrypt_service.py  pin_routes.py  pin_service.py  pyproject.toml  requirements.txt  server.py  ui_pages.py  upload_routes.py
.github/workflows/: publish.yml
static/css/: folder_not_found.css  home.css  pin_entry.css  uploads.css  uploads_preview.css
static/js/: home.js  uploads.js  uploads_preview.js
templates/: folder_not_found.html  home.html  pin_entry.html  uploads.html
