[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inert-transfer"
version = "0.1.5"
description = "File transfer server with PIN and encryption"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Inert Tila" }
]
license = { text = "MIT" } 
keywords = ["file-transfer", "flask", "encryption", "pin"]
dependencies = [
  "Flask",
  "flask-sock",
  "cryptography",
  "itsdangerous",
  "Werkzeug",
  "waitress"
]

[project.urls]
Homepage = "https://inert.netlify.app"
Repository = "https://github.com/inerttila/File-Transfer-Server"

[project.scripts]
fts = "cli:main"
inert = "cli:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "cli",
  "server",
  "upload_routes",
  "pin_routes",
  "pin_service",
  "encrypt_service",
  "decrypt_service",
  "ui_pages"
]

[tool.setuptools.data-files]
"templates" = ["templates/*.html"]
"static/css" = ["static/css/*.css"]
"static/js" = ["static/js/*.js"]
